@@ -1,16 +1,16 @@
 Source: busybox
 Priority: optional
 Maintainer: Erik Andersen <andersee@debian.org>
-Build-Depends: debhelper
-Standards-Version: 3.1.1
+Build-Depends: debhelper (>= 2.1.18), dpkg-dev (1.7.0)
+Standards-Version: 3.2.1.0
 
 Package: busybox
 Architecture: any
 Depends: ${shlibs:Depends}
-Conflicts: binutils, bsdutils, console-tools, cpio, debianutils, dnsutils, dpkg, fbset, fdflush, fileutils, grep, gzip, hostname, modutils, mount, netbase, procps, psmisc, sed, sharutils, shellutils, sysklogd, sysvinit, tar, textutils, update, util-linux
-Replaces: netbase
+Conflicts: 
+Replaces: 
 Section: utils
-Description: Tiny utilities for the debian-installer and for embedded systems. 
+Description: Tiny utilities for small and embedded systems. 
  BusyBox combines tiny versions of many common UNIX utilities into a single
  small executable. It provides minimalist replacements for the most common
  utilities you would usually find on your desktop system (i.e. ls, cp, mv,
@@ -19,10 +19,10 @@ Description: Tiny utilities for the debian-installer and for embedded systems.
  provide the expected functionality and behave very much like their GNU
  counterparts.
  .
- BusyBox is used by the debian-installer.  Installing BusyBox onto your Debian
- system is not recommended, unless you are intended to make a very small
- embedded system.  Chances are good that for embedded systems, you will want to
- recompile to only include the tools and utilities you wish to include.
+ This package installs the BusyBox binary but does not install symlinks
+ for any of the supported utilities.  You can use /bin/busybox --install
+ to install BusyBox to the current directory (you do not want to do this
+ in / on your Debian system!).
 
 Package: busybox-static
 Architecture: any
@@ -43,4 +43,22 @@ Description: Provides a stand alone rescue shell with tons of builtin utilities.
  system.  Invoke "busybox sh" and you have a standalone shell ready to save
  your system from certain destruction.  Invoke "busybox", and it will list the
  available builtin commands.
+
+Package: busybox-udeb
+Architecture: any
+Depends: ${shlibs:Depends}
+Section: debian-installer
+Description: Tiny utilities for the debian-installer and for embedded systems. 
+ BusyBox combines tiny versions of many common UNIX utilities into a single
+ small executable. It provides minimalist replacements for the most common
+ utilities you would usually find on your desktop system (i.e. ls, cp, mv,
+ mount, tar, etc).  The utilities in BusyBox generally have fewer options than
+ their full-featured GNU cousins; however, the options that are included
+ provide the expected functionality and behave very much like their GNU
+ counterparts.
+ .
+ BusyBox is used by the debian-installer.  Installing BusyBox onto your Debian
+ system is not recommended, unless you are intended to make a very small
+ embedded system.  Chances are good that for embedded systems, you will want to
+ recompile to only include the tools and utilities you wish to include.
 
